Upload index.html rough draft.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,36 @@
 <html>
    <head>
    </head>
-   <body>
+   <body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#330088" alink="#FF0044">
       <!-- Write your HTML in this file! -->
+      <h1>Kyle D. McColgan</h1>
+      <h2>Location</h2>
+      <img align="left" width="125" height="145" hspace="100" src="kdm.gif" alt="KDM picture">
+      <ul>
+      <li>Kyle McColgan
+      <br>
+      <a href="http://www.github.com/kmccol1">Git Hub</a>, Coding Projects
+      <br>
+      South Saint Louis County
+      <br>Saint Louis, Missouri 63128-1464, USA
+      </li><li>kdmbus21@gmail.com
+      </li><li>+1 314-660-5776 <em>(mobile)</em>, kylem9334 <em>(Discord)</em>
+      </li></ul>
+      <br>
+      <hr>
+      <h2>Dedication note</h2>
+      To all the future problem solvers out there, may this website renew your passion and committment for finding elegant solutions to complex problems:
+      <p>This website is dedicated to my family and represents the immeasurable strength of their love and unconditional support. None of this would be possible without them being there along with my friends showing me how to overcome challenges and embrace obstacles. </p>
+      <hr>
+      <h2>Mission statement</h2>
+      Main objective is to achieve my full potential through positive daily growth and experiencing life to its fullest extent possible, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.
+      <p>Career objectives include diversifying my resume through an array of professional experiences, as well as to develop a strong network of people with similar interests or not so similar interests.</p>
+      <hr>
+      <h2>Brief resume</h2>
+      <li>
+      ::marker Walmart, Software Engineer, July 2021 - October 2022.
+      <p>
+
+     </p></li>
    </body>
 </html>
