Upload assigment four part one.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
    <head>
    </head>
+   <main>
    <body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#330088" alink="#FF0044">
       <!-- Write your HTML in this file! -->
       <h1>Kyle D. McColgan</h1>
       <h2>Location</h2>
-      <img align="left" width="125" height="145" hspace="100" src="kdm.gif" alt="KDM picture">
+      <img align="left" width="125" height="145" hspace="100" src="images/kdm.gif" alt="KDM picture">
+      <header>Contact Info: </header>
       <ul>
       <li>Kyle McColgan
       <br>
@@ -27,11 +29,19 @@
       Main objective is to achieve my full potential through positive daily growth and experiencing life to its fullest extent possible, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.
       <p>Career objectives include diversifying my resume through an array of professional experiences, as well as to develop a strong network of people with similar interests or not so similar interests.</p>
       <hr>
-      <h2>Brief resume</h2>
-      <li>
-      ::marker Walmart, Software Engineer, July 2021 - October 2022.
+      <h2>History &amp; Resume</h2>
+      <ul>
+      <li> Primary Systems, IT Engineer, June 2022 - September 2022.</li>
+      <li> Walmart, Software Engineer, July 2021 - October 2022.</li>
       <p>
+     </p></ul>
 
-     </p></li>
    </body>
+   <hr>
+   </main>
+   <article>Useful links:
+   <ul>
+   <li><a href="http://www.github.com/kmccol1">Git Hub</a></article>
+   <hr>
+   <footer> Updated: March 2024, to upload first draft. </footer>
 </html>
