Upload styles.css CSS styling.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+   <link href="styles.css" rel="stylesheet" type="text/css" />
    </head>
    <main>
    <body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#330088" alink="#FF0044">
@@ -8,7 +9,7 @@
       <h1>Kyle D. McColgan</h1>
       <h2>Location</h2>
       <img align="left" width="125" height="145" hspace="100" src="images/kdm.gif" alt="KDM picture">
-      <header>Contact Info: </header>
+      <header id="mainHeading">Contact Info: </header>
       <ul>
       <li>Kyle McColgan
       <br>
@@ -27,7 +28,7 @@
       <hr>
       <h2>Mission statement</h2>
       Main objective is to achieve my full potential through positive daily growth and experiencing life to its fullest extent possible, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.
-      <p>Career objectives include diversifying my resume through an array of professional experiences, as well as to develop a strong network of people with similar interests or not so similar interests.</p>
+      <p id ="testP" class="funParagraph">Career objectives include diversifying my resume through an array of professional experiences, as well as to develop a strong network of people with similar interests or not so similar interests.</p>
       <hr>
       <h2>History &amp; Resume</h2>
       <ul>
