Add some clarity to the mission statement in index.html.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <link href="styles.css" rel="stylesheet" type="text/css" />
    </head>
    <main>
+   <body>
       <!-- Write your HTML in this file! -->
       <h1>Kyle D. McColgan</h1>
       <h2>Location</h2>
@@ -27,7 +28,7 @@
       <hr>
       <h2>Mission statement</h2>
       Main objective is to achieve my full potential through positive daily growth and experiencing life to its fullest extent possible, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.
-      <p id ="testP" class="funParagraph">Career objectives include diversifying my resume through an array of professional experiences, as well as to develop a strong network of people with similar interests or not so similar interests.</p>
+      <p id ="testP" class="funParagraph">I have two main career goals that I want to approach in a joyful yet serious manner, the first is to gain as much collaboration experience as possible developing robust and quality software solutions, and secondly to build a strong professional network.</p>
       <hr>
       <h2>History &amp; Resume</h2>
       <ul>
@@ -43,5 +44,7 @@
    <ul>
    <li><a href="http://www.github.com/kmccol1">Git Hub</a></article>
    <hr>
-   <footer> Updated: March 2024, to upload first draft. </footer>
+   <footer> Updated: March 2024, to upload first draft.
+            Updated: June 2024, clarify the mission statement.
+   </footer>
 </html>
