Clarify the mission statement pt. 2.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <p>This website is dedicated to my family and represents the immeasurable strength of their love and unconditional support. None of this would be possible without them being there along with my friends showing me how to overcome challenges and embrace obstacles. </p>
       <hr>
       <h2>Mission statement</h2>
-      Main objective is to achieve my full potential through positive daily growth and experiencing life to its fullest extent possible, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.
-      <p id ="testP" class="funParagraph">I have two main career goals that I want to approach in a joyful yet serious manner, the first is to gain as much collaboration experience as possible developing robust and quality software solutions, and secondly to build a strong professional network.</p>
+      Main objective is to reach my professional potential through daily growth and experiencing life to the fullest, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.
+      <p id ="testP" class="funParagraph">I have a couple of career goals mainly: consistent development work and a strong focus on collaboration.</p>
       <hr>
       <h2>History &amp; Resume</h2>
       <ul>
