feat: Revamp personal portfolio website
- Redesigned header for improved aesthetics and organization
- Introduced responsive layout using flexbox for contact information
- Added projects section to showcase network scanner (hostRecon) with link to GitHub
- Updated typography and color scheme for better readability and modern appearance
- Enhanced profile image presentation with circular cropping.

--- a/index.html
+++ b/index.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
-<html>
-   <head>
-   <link href="styles.css" rel="stylesheet" type="text/css" />
-   </head>
-   <main>
-   <body>
-      <!-- Write your HTML in this file! -->
-      <h1>Kyle D. McColgan</h1>
-      <h2>Location</h2>
-      <img align="left" width="125" height="145" hspace="100" src="images/kdm.gif" alt="KDM picture">
-      <header id="mainHeading">Contact Info: </header>
-      <ul>
-      <li>Kyle McColgan
-      <br>
-      <a href="http://www.github.com/kmccol1">Git Hub</a>, Coding Projects
-      <br>
-      South Saint Louis County
-      <br>Saint Louis, Missouri 63128-1464, USA
-      </li><li>kdmbus21@gmail.com
-      </li><li>+1 314-660-5776 <em>(mobile)</em>, kylem9334 <em>(Discord)</em>
-      </li></ul>
-      <br>
-      <hr>
-      <h2>Dedication note</h2>
-      To all the future problem solvers out there, may this website renew your passion and committment for finding elegant solutions to complex problems:
-      <p>This website is dedicated to my family and represents the immeasurable strength of their love and unconditional support. None of this would be possible without them being there along with my friends showing me how to overcome challenges and embrace obstacles. </p>
-      <hr>
-      <h2>Mission statement</h2>
-      Main objective is to reach my professional potential through daily growth and experiencing life to the fullest, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.
-      <p id ="testP" class="funParagraph">I have a couple of career goals mainly: consistent development work and a strong focus on collaboration.</p>
-      <hr>
-      <h2>History &amp; Resume</h2>
-      <ul>
-      <li> Primary Systems, IT Engineer, June 2022 - September 2022.</li>
-      <li> Walmart, Software Engineer, July 2021 - October 2022.</li>
-      <p>
-     </p></ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <title>Kyle D. McColgan - Portfolio</title>
+</head>
+<body>
+    <header>
+        <h1>Kyle D. McColgan</h1>
+        <div class="contact-info">
+            <img class="profile-image" src="images/kdm.gif" alt="KDM picture">
+            <div>
+                <p>Location: South Saint Louis County, Saint Louis, Missouri 63128-1464, USA</p>
+                <p>Email: <a href="mailto:kdmbus21@gmail.com">kdmbus21@gmail.com</a></p>
+                <p>Mobile: <a href="tel:+13146605776">+1 314-660-5776</a></p>
+                <p>Discord: <em>kylem9334</em></p>
+                <p><a class="github-link" href="http://www.github.com/kmccol1">GitHub</a> | Coding Projects</p>
+            </div>
+        </div>
+    </header>
 
-   </body>
-   <hr>
-   </main>
-   <article>Useful links:
-   <ul>
-   <li><a href="http://www.github.com/kmccol1">Git Hub</a></article>
-   <hr>
-   <footer> Updated: March 2024, to upload first draft.
-            Updated: June 2024, clarify the mission statement.
-   </footer>
+    <main>
+        <section>
+            <h2>Dedication Note</h2>
+            <p>This website is dedicated to my family and represents the immeasurable strength of their love and unconditional support. None of this would be possible without them, along with my friends showing me how to overcome challenges and embrace obstacles.</p>
+        </section>
+
+        <section>
+            <h2>Mission Statement</h2>
+            <p>My main objective is to reach my professional potential through daily growth and experiencing life to the fullest, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.</p>
+            <p class="funParagraph">I aim for consistent development work with a strong focus on collaboration.</p>
+        </section>
+
+        <section>
+            <h2>Projects</h2>
+            <p>Check out my latest project: <strong><a href="https://github.com/kmccol1/hostRecon" target="_blank">hostRecon</a></strong> - A modern network scanner designed for efficient host enumeration.</p>
+        </section>
+
+        <section>
+            <h2>History & Resume</h2>
+            <ul>
+                <li>Primary Systems, IT Engineer, June 2022 - September 2022</li>
+                <li>Walmart, Software Engineer, July 2021 - October 2022</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>Updated: March 2024 | Updated: June 2024</p>
+    </footer>
+</body>
 </html>
