Remove the giant picture.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Kyle D. McColgan</h1>
         <div class="contact-info">
-            <img class="profile-image" src="images/kdm.gif" alt="KDM picture">
+<!--            <img class="profile-image" src="images/kdm.gif" alt="KDM picture">-->
             <div>
                 <p>Location: South Saint Louis County, Saint Louis, Missouri 63128-1464, USA</p>
                 <p>Email: <a href="mailto:kdmbus21@gmail.com">kdmbus21@gmail.com</a></p>
