--- a/index.html
+++ b/index.html
@@ -9,46 +9,58 @@
 <body>
     <header>
         <h1>Kyle D. McColgan</h1>
-        <div class="contact-info">
-<!--            <img class="profile-image" src="images/kdm.gif" alt="KDM picture">-->
-            <div>
-                <p>Location: South Saint Louis County, Saint Louis, Missouri 63128-1464, USA</p>
-                <p>Email: <a href="mailto:kdmbus21@gmail.com">kdmbus21@gmail.com</a></p>
-                <p>Mobile: <a href="tel:+13146605776">+1 314-660-5776</a></p>
-                <p>Discord: <em>kylem9334</em></p>
-                <p><a class="github-link" href="http://www.github.com/kmccol1">GitHub</a> | Coding Projects</p>
-            </div>
-        </div>
+        <h2>Software Developer</h2>
+        <img class="profile-img" src="images/kdm.gif" alt="KDM picture">
     </header>
 
-    <main>
-        <section>
-            <h2>Dedication Note</h2>
-            <p>This website is dedicated to my family and represents the immeasurable strength of their love and unconditional support. None of this would be possible without them, along with my friends showing me how to overcome challenges and embrace obstacles.</p>
-        </section>
+    <section id="contact">
+        <h2>Contact Information</h2>
+        <ul>
+            <li><strong>Email:</strong> <a href="mailto:kdmbus21@gmail.com">kdmbus21@gmail.com</a></li>
+            <li><strong>Phone:</strong> +1 314-660-5776</li>
+            <li><strong>GitHub:</strong> <a href="http://www.github.com/kmccol1">github.com/kmccol1</a></li>
+            <li><strong>Location:</strong> South Saint Louis County, Missouri, USA</li>
+        </ul>
+    </section>
 
-        <section>
-            <h2>Mission Statement</h2>
-            <p>My main objective is to reach my professional potential through daily growth and experiencing life to the fullest, as well as provide an example for others to follow and demonstrate that nothing is impossible through hard work and consistency.</p>
-            <p class="funParagraph">I aim for consistent development work with a strong focus on collaboration.</p>
-        </section>
+    <hr>
 
-        <section>
-            <h2>Projects</h2>
-            <p>Check out my latest project: <strong><a href="https://github.com/kmccol1/hostRecon" target="_blank">hostRecon</a></strong> - A modern network scanner designed for efficient host enumeration.</p>
-        </section>
+    <section id="dedication">
+        <h2>Dedication</h2>
+        <p>This website is dedicated to my family and represents the immeasurable strength of their love and support. Thank you for inspiring me to overcome challenges and embrace obstacles.</p>
+    </section>
 
-        <section>
-            <h2>History & Resume</h2>
-            <ul>
-                <li>Primary Systems, IT Engineer, June 2022 - September 2022</li>
-                <li>Walmart, Software Engineer, July 2021 - October 2022</li>
-            </ul>
-        </section>
-    </main>
+    <hr>
+
+    <section id="mission">
+        <h2>Mission Statement</h2>
+        <p>My objective is to reach my professional potential through daily growth, while providing an example for others to demonstrate that nothing is impossible through hard work and consistency.</p>
+    </section>
+
+    <hr>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><strong>HostRecon:</strong> A modern network scanning tool designed for efficient host enumeration and flexibility in network analysis. Built using C++ and libpcap, it provides a user-friendly interface for identifying active hosts on a network.</li>
+        </ul>
+    </section>
+
+    <hr>
+
+    <section id="history">
+        <h2>Professional History</h2>
+        <ul>
+            <li>Primary Systems, IT Engineer, June 2022 - September 2022</li>
+            <li>Walmart, Software Engineer, July 2021 - October 2022</li>
+        </ul>
+    </section>
+
+    <hr>
 
     <footer>
-        <p>Updated: March 2024 | Updated: June 2024</p>
+        <p>Updated: March 2024 - Initial draft upload</p>
+        <p>Updated: June 2024 - Clarified mission statement</p>
     </footer>
 </body>
 </html>
